@@ -103,6 +103,11 @@ void DoCredits()
         quitKey |= (getKeyState(vbKeyEscape) == KEY_PRESSED);
         quitKey |= (getKeyState(vbKeySpace) == KEY_PRESSED);
         quitKey |= (getKeyState(vbKeyReturn) == KEY_PRESSED);
+        for(int p = 1; p <= maxLocalPlayers; ++p)
+        {
+            if(useJoystick[p] > 0)
+                quitKey |= JoyIsKeyDown(useJoystick[p] - 1, conJoystick[p].Start);
+        }
 #ifdef __ANDROID__ // Quit credits on BACK key press
         quitKey |= (getKeyState(SDL_SCANCODE_AC_BACK) == KEY_PRESSED);
 #endif
